Fix quick edit drawer title size and header spacing (#64811)
* Fix quick edit drawer title size and header spacing

* remove comment

---------

--- a/packages/js/experimental-products-app/src/style.scss
+++ b/packages/js/experimental-products-app/src/style.scss
@@ -60,6 +60,7 @@
 	display: flex;
 	flex-direction: column;
 	height: 100%;
+	padding-top: var(--wpds-dimension-padding-2xl, 24px);
 }
 
 .woocommerce-product-edit__header {
@@ -71,7 +72,8 @@
 	border-bottom: 1px solid var(--wp-components-color-gray-300, #ddd);
 }
 
-.woocommerce-product-edit__title {
+// Qualified to beat `@wordpress/ui`'s unlayered `:is(h1-h6).heading` defense rule, which would otherwise apply heading-xl (20px).
+.woocommerce-product-edit__drawer .woocommerce-product-edit__title {
 	margin: 0;
 	font-size: 15px;
 	font-weight: 500;
